@@ -1,0 +1,12 @@
+#
+# Velbus CONFIGURATION:
+#
+# Velbus communication configuration
+
+##
+# TCP/IP Server IP/Hostname(s)
+velbus.server.hostnames=localhost
+
+##
+# TCP/IP Server Port(s)
+velbus.server.ports=8080
